# notebooks-vol1

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
lib/: __init__.py
lib/core/: __init__.py  embeddings.py  llm.py  llm_clients.py  llm_normalize.py
lib/parsing/: __init__.py
lib/parsing/pdf/: __init__.py  _shared.py  doc_context.py  enrich.py  profile.py
lib/parsing/pdf/easyocr/: __init__.py  _client.py  line_df.py  parse_pdf_easyocr.py
lib/parsing/pdf/fitz/: __init__.py  columns.py  line_df.py  native_metadata.py  objects.py  page_df.py  parse_pdf.py  quality_signals.py  references.py  source.py  span_df.py  toc.py
lib/prompts/: __init__.py
lib/retrieval/: __init__.py  embedding_similarity.py  keyword_matching.py
lib/storage/: __init__.py  intermediate.py  paths.py  sqlite_store.py
notebooks/: 02_2_rerankers.ipynb  05_5_easyocr_parsing.ipynb  06_A_thesis.ipynb  06_B_extraction.ipynb  06_C_dispatch.ipynb  06_question_parsing.ipynb  07_A_filtering.ipynb  07_B_detection.ipynb  07_C_arbiter.ipynb  07_retrieval.ipynb
